# facial-expression-controlled-music-player

./: README.md
src/: image_emotion_gender_demo.py  image_gradcam_demo.py  mood_player.py  train_emotion_classifier.py  train_gender_classifier.py  video_emotion_color_music_demo.py  video_emotion_gender_demo.py  video_gradcam_demo.py
src/models/: cnn.py
src/public/: PKG-INFO  setup.cfg
src/utils/: data_augmentation.py  datasets.py  grad_cam.py  mood_player.py  preprocessor.py  readme  sampler.py  user_manual  visualizer.py
src/web/: emotion_gender_processor.py  faces.py
