[metadata]
name = public
version = 1.0.3
url = https://github.com/looking-for-a-job/public.py
classifiers = file: .data/pypi.org/classifiers.txt
description = @public decorator, public(*objects) function - add objects names to __all__
long_description = file: .data/pypi.org/README.md
long_description_content_type = text/markdown
keywords = public __all__

[options]
install_requires = 
	setuptools
packages = 
	public

[egg_info]
tag_build = 
tag_date = 0

